# ez-yt-dlp

./: .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE.md  ez-yt-dlp  ez-yt-dlp.py  ez-yt-dlp.sh  ez_yt_dlp.py  pyproject.toml  release.sh
tests/: test_cli.py
tools/: run_tests_no_pytest.py
